Bug 125681 - Clicking on Insert Symbol hangs session
Summary: Clicking on Insert Symbol hangs session
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
: 126214 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-06-04 13:16 UTC by bastien.guesdon
Modified: 2019-08-30 08:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bastien.guesdon 2019-06-04 13:16:50 UTC
Description:
When opening a Text document or a Sheet document with LibreOffice Online and clicking on the button "Insert Special Character", the document is not modifiable anymore and is not seeable at all after refreshing the page.

Steps to Reproduce:
1.Open a text or sheet document with libreoffice online
2.Click "insert special character"
3.

Actual Results:
Can't access the document anymore

Expected Results:
Access the document


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Aron Budea 2019-06-06 07:40:16 UTC
Confirmed and bisected to the following commit. Adding Cc: to Ashod Nakashian, please take a look.

https://cgit.freedesktop.org/libreoffice/online/commit/?id=6b82d245faa3aa727c4e8b37be13e0746ca95f6c
author		Ashod Nakashian <ashod.nakashian@collabora.co.uk>	2019-04-17 22:46:16 +0100
committer	Ashod Nakashian <ashnakash@gmail.com>	2019-04-23 03:00:07 +0200

Unipoll: integrate with the LOK mainloop in a single thread.
Comment 2 Aron Budea 2019-07-10 12:49:21 UTC
*** Bug 126214 has been marked as a duplicate of this bug. ***
Comment 3 Xisco Faulí 2019-07-12 16:45:59 UTC
I think we can increase the severity here. @Aron, change it back to normal if you disagree, in the end, you are the online expert
Comment 4 Commit Notification 2019-07-24 13:11:31 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/+/f7a70ba9d3411953ca4147ac8cc484dd8745b5b7%5E%21

tdf#125681: Get rid of ChildSession::getDocumentMutex() and associated code
Comment 5 How can I remove my account? 2019-08-30 08:46:16 UTC
Was fixed many weeks ago, also in the collabora-online-4 branch from which the iOS app is built. Resolving.