kit/ChildSession.cpp
@@ -122,7 +122,6 @@ bool ChildSession::_handleInput(const char *buffer, int length)
         // Client is getting active again.
         // Send invalidation and other sync-up messages.
         std::unique_lock<std::recursive_mutex> lock(Mutex); //TODO: Move to top of function?
-        std::unique_lock<std::mutex> lockLokDoc(_docManager.getDocumentMutex());
 
         getLOKitDocument()->setView(_viewId);
 
@@ -132,8 +131,6 @@ bool ChildSession::_handleInput(const char *buffer, int length)
 
         // Notify all views about updated view info
         _docManager.notifyViewInfo();
-
-        lockLokDoc.unlock();
 
         if (getLOKitDocument()->getDocumentType() != LOK_DOCTYPE_TEXT)
         {
@@ -468,13 +465,9 @@ bool ChildSession::uploadSignedDocument(const char* buffer, int length, const st
     const Poco::Path filenameParam(filename);
     const std::string url = JAILED_DOCUMENT_ROOT + tmpDir + "/" + filenameParam.getFileName();
 
-    {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
-        getLOKitDocument()->saveAs(url.c_str(),
-                                   filetype.empty() ? nullptr : filetype.c_str(),
-                                   nullptr);
-    }
+    getLOKitDocument()->saveAs(url.c_str(),
+                               filetype.empty() ? nullptr : filetype.c_str(),
+                               nullptr);
 
     Authorization authorization(Authorization::Type::Token, token);
     Poco::URI uriObject(wopiUrl + "/" + filename + "/contents");
@@ -585,8 +578,6 @@ bool ChildSession::loadDocument(const char * /*buffer*/, int /*length*/, const s
     LOG_INF("Created new view with viewid: [" << _viewId << "] for username: [" <<
             getUserNameAnonym() << "] in session: [" << getId() << "].");
 
-    std::unique_lock<std::mutex> lockLokDoc(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     _docType = LOKitHelper::getDocumentTypeAsString(getLOKitDocument()->get());
@@ -650,13 +641,9 @@ bool ChildSession::sendFontRendering(const char* /*buffer*/, int /*length*/, con
     int width = 0, height = 0;
     unsigned char* ptrFont = nullptr;
 
-    {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
+    getLOKitDocument()->setView(_viewId);
 
-        getLOKitDocument()->setView(_viewId);
-
-        ptrFont = getLOKitDocument()->renderFont(decodedFont.c_str(), decodedChar.c_str(), &width, &height);
-    }
+    ptrFont = getLOKitDocument()->renderFont(decodedFont.c_str(), decodedChar.c_str(), &width, &height);
 
     LOG_TRC("renderFont [" << font << "] rendered in " << (timestamp.elapsed()/1000.) << "ms");
 
@@ -683,13 +670,10 @@ bool ChildSession::sendFontRendering(const char* /*buffer*/, int /*length*/, con
 bool ChildSession::getStatus(const char* /*buffer*/, int /*length*/)
 {
     std::string status;
-    {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
-        getLOKitDocument()->setView(_viewId);
+    getLOKitDocument()->setView(_viewId);
 
-        status = LOKitHelper::documentStatus(getLOKitDocument()->get());
-    }
+    status = LOKitHelper::documentStatus(getLOKitDocument()->get());
 
     if (status.empty())
     {
@@ -743,8 +727,6 @@ bool ChildSession::getCommandValues(const char* /*buffer*/, int /*length*/, cons
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     if (command == ".uno:DocumentRepair")
@@ -787,8 +769,6 @@ bool ChildSession::clientZoom(const char* /*buffer*/, int /*length*/, const std:
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     getLOKitDocument()->setClientZoom(tilePixelWidth, tilePixelHeight, tileTwipWidth, tileTwipHeight);
@@ -811,8 +791,6 @@ bool ChildSession::clientVisibleArea(const char* /*buffer*/, int /*length*/, con
         sendTextFrame("error: cmd=clientvisiblearea kind=syntax");
         return false;
     }
-
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
     getLOKitDocument()->setView(_viewId);
 
@@ -839,8 +817,6 @@ bool ChildSession::outlineState(const char* /*buffer*/, int /*length*/, const st
 
     bool column = type == "column";
     bool hidden = state == "hidden";
-
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
     getLOKitDocument()->setView(_viewId);
 
@@ -884,17 +860,13 @@ bool ChildSession::downloadAs(const char* /*buffer*/, int /*length*/, const std:
     const std::string nameAnonym = anonymizeUrl(name);
     const std::string urlAnonym = JAILED_DOCUMENT_ROOT + tmpDir + "/" + Poco::Path(nameAnonym).getFileName();
 
-    {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
+    LOG_DBG("Calling LOK's downloadAs with: url='" << urlAnonym << "', format='" <<
+            (format.empty() ? "(nullptr)" : format.c_str()) << "', ' filterOptions=" <<
+            (filterOptions.empty() ? "(nullptr)" : filterOptions.c_str()) << "'.");
 
-        LOG_DBG("Calling LOK's downloadAs with: url='" << urlAnonym << "', format='" <<
-                (format.empty() ? "(nullptr)" : format.c_str()) << "', ' filterOptions=" <<
-                (filterOptions.empty() ? "(nullptr)" : filterOptions.c_str()) << "'.");
-
-        getLOKitDocument()->saveAs(url.c_str(),
-                                   format.empty() ? nullptr : format.c_str(),
-                                   filterOptions.empty() ? nullptr : filterOptions.c_str());
-    }
+    getLOKitDocument()->saveAs(url.c_str(),
+                               format.empty() ? nullptr : format.c_str(),
+                               filterOptions.empty() ? nullptr : filterOptions.c_str());
 
     sendTextFrame("downloadas: jail=" + _jailId + " dir=" + tmpDir + " name=" + name +
                   " port=" + std::to_string(ClientPortNumber) + " id=" + id);
@@ -910,13 +882,10 @@ bool ChildSession::getChildId()
 std::string ChildSession::getTextSelectionInternal(const std::string& mimeType)
 {
     char* textSelection = nullptr;
-    {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
-        getLOKitDocument()->setView(_viewId);
+    getLOKitDocument()->setView(_viewId);
 
-        textSelection = getLOKitDocument()->getTextSelection(mimeType.c_str(), nullptr);
-    }
+    textSelection = getLOKitDocument()->getTextSelection(mimeType.c_str(), nullptr);
 
     std::string str(textSelection ? textSelection : "");
     free(textSelection);
@@ -953,8 +922,6 @@ bool ChildSession::paste(const char* buffer, int length, const std::vector<std::
     const int size = length - firstLine.size() - 1;
     if (size > 0)
     {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
         getLOKitDocument()->setView(_viewId);
 
         getLOKitDocument()->paste(mimeType.c_str(), data, size);
@@ -1014,8 +981,6 @@ bool ChildSession::insertFile(const char* /*buffer*/, int /*length*/, const std:
                 "\"value\":\"" + url + "\""
             "}}";
 
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
         getLOKitDocument()->setView(_viewId);
 
         LOG_TRC("Inserting graphic: '" << arguments.c_str() << "', '");
@@ -1046,7 +1011,6 @@ bool ChildSession::extTextInputEvent(const char* /*buffer*/, int /*length*/,
     std::string decodedText;
     URI::decode(text, decodedText);
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
     getLOKitDocument()->setView(_viewId);
     getLOKitDocument()->postWindowExtTextInputEvent(id, type, decodedText.c_str());
 
@@ -1101,7 +1065,6 @@ bool ChildSession::keyEvent(const char* /*buffer*/, int /*length*/,
         return true;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
     getLOKitDocument()->setView(_viewId);
     if (target == LokEventTargetEnum::Document)
         getLOKitDocument()->postKeyEvent(type, charcode, keycode);
@@ -1140,8 +1103,6 @@ bool ChildSession::gestureEvent(const char* /*buffer*/, int /*length*/,
         sendTextFrame("error: cmd=" +  std::string(tokens[0]) + " kind=syntax");
         return false;
     }
-
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
     getLOKitDocument()->setView(_viewId);
 
@@ -1203,8 +1164,6 @@ bool ChildSession::mouseEvent(const char* /*buffer*/, int /*length*/,
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
     switch (target)
     {
@@ -1234,8 +1193,6 @@ bool ChildSession::unoCommand(const char* /*buffer*/, int /*length*/, const std:
                           tokens[1] == ".uno:Undo" ||
                           tokens[1] == ".uno:Redo" ||
                           Util::startsWith(tokens[1], "vnd.sun.star.script:"));
-
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
     getLOKitDocument()->setView(_viewId);
 
@@ -1279,8 +1236,6 @@ bool ChildSession::selectText(const char* /*buffer*/, int /*length*/, const std:
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     getLOKitDocument()->setTextSelection(type, x, y);
@@ -1292,7 +1247,6 @@ bool ChildSession::renderWindow(const char* /*buffer*/, int /*length*/, const st
 {
     const unsigned winId = (tokens.size() > 1 ? std::stoul(tokens[1]) : 0);
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
     getLOKitDocument()->setView(_viewId);
 
     int startX = 0, startY = 0;
@@ -1362,7 +1316,6 @@ bool ChildSession::resizeWindow(const char* /*buffer*/, int /*length*/, const st
 {
     const unsigned winId = (tokens.size() > 1 ? std::stoul(tokens[1].c_str(), nullptr, 10) : 0);
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
     getLOKitDocument()->setView(_viewId);
 
     std::string size;
@@ -1384,7 +1337,6 @@ bool ChildSession::sendWindowCommand(const char* /*buffer*/, int /*length*/, con
 {
     const unsigned winId = (tokens.size() > 1 ? std::stoul(tokens[1]) : 0);
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
     getLOKitDocument()->setView(_viewId);
 
     if (tokens.size() > 2 && tokens[2] == "close")
@@ -1572,11 +1524,7 @@ bool ChildSession::exportSignAndUploadDocument(const char* buffer, int length, c
     const Poco::Path filenameParam(filename);
     const std::string aTempDocumentURL = JAILED_DOCUMENT_ROOT + aTempDir + "/" + filenameParam.getFileName();
 
-    {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
-        getLOKitDocument()->saveAs(aTempDocumentURL.c_str(), filetype.c_str(), nullptr);
-    }
+    getLOKitDocument()->saveAs(aTempDocumentURL.c_str(), filetype.c_str(), nullptr);
 
     // sign document
     {
@@ -1667,8 +1615,6 @@ bool ChildSession::exportSignAndUploadDocument(const char* buffer, int length, c
 
 bool ChildSession::askSignatureStatus(const char* buffer, int length, const std::vector<std::string>& /*tokens*/)
 {
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     bool bResult = true;
 
     const std::string firstLine = getFirstLine(buffer, length);
@@ -1719,8 +1665,6 @@ bool ChildSession::selectGraphic(const char* /*buffer*/, int /*length*/, const s
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     getLOKitDocument()->setGraphicSelection(type, x, y);
@@ -1735,8 +1679,6 @@ bool ChildSession::resetSelection(const char* /*buffer*/, int /*length*/, const 
         sendTextFrame("error: cmd=resetselection kind=syntax");
         return false;
     }
-
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
     getLOKitDocument()->setView(_viewId);
 
@@ -1786,51 +1728,48 @@ bool ChildSession::saveAs(const char* /*buffer*/, int /*length*/, const std::vec
     }
 
     bool success = false;
-    {
-        std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
-        if (filterOptions.empty() && format == "html")
+    if (filterOptions.empty() && format == "html")
+    {
+        // Opt-in to avoid linked images, those would not leave the chroot.
+        filterOptions = "EmbedImages";
+    }
+
+    // We don't have the FileId at this point, just a new filename to save-as.
+    // So here the filename will be obfuscated with some hashing, which later will
+    // get a proper FileId that we will use going forward.
+    LOG_DBG("Calling LOK's saveAs with: '" << anonymizeUrl(wopiFilename) << "', '" <<
+            (format.size() == 0 ? "(nullptr)" : format.c_str()) << "', '" <<
+            (filterOptions.size() == 0 ? "(nullptr)" : filterOptions.c_str()) << "'.");
+
+    getLOKitDocument()->setView(_viewId);
+
+    success = getLOKitDocument()->saveAs(url.c_str(),
+                                         format.empty() ? nullptr : format.c_str(),
+                                         filterOptions.empty() ? nullptr : filterOptions.c_str());
+
+    if (!success)
+    {
+        // a desperate try - add an extension hoping that it'll help
+        bool retry = true;
+        switch (getLOKitDocument()->getDocumentType())
         {
-            // Opt-in to avoid linked images, those would not leave the chroot.
-            filterOptions = "EmbedImages";
+            case LOK_DOCTYPE_TEXT:         url += ".odt"; wopiFilename += ".odt"; break;
+            case LOK_DOCTYPE_SPREADSHEET:  url += ".ods"; wopiFilename += ".ods"; break;
+            case LOK_DOCTYPE_PRESENTATION: url += ".odp"; wopiFilename += ".odp"; break;
+            case LOK_DOCTYPE_DRAWING:      url += ".odg"; wopiFilename += ".odg"; break;
+            default:                       retry = false; break;
         }
 
-        // We don't have the FileId at this point, just a new filename to save-as.
-        // So here the filename will be obfuscated with some hashing, which later will
-        // get a proper FileId that we will use going forward.
-        LOG_DBG("Calling LOK's saveAs with: '" << anonymizeUrl(wopiFilename) << "', '" <<
-                (format.size() == 0 ? "(nullptr)" : format.c_str()) << "', '" <<
-                (filterOptions.size() == 0 ? "(nullptr)" : filterOptions.c_str()) << "'.");
-
-        getLOKitDocument()->setView(_viewId);
-
-        success = getLOKitDocument()->saveAs(url.c_str(),
-                                             format.empty() ? nullptr : format.c_str(),
-                                             filterOptions.empty() ? nullptr : filterOptions.c_str());
-
-        if (!success)
+        if (retry)
         {
-            // a desperate try - add an extension hoping that it'll help
-            bool retry = true;
-            switch (getLOKitDocument()->getDocumentType())
-            {
-                case LOK_DOCTYPE_TEXT:         url += ".odt"; wopiFilename += ".odt"; break;
-                case LOK_DOCTYPE_SPREADSHEET:  url += ".ods"; wopiFilename += ".ods"; break;
-                case LOK_DOCTYPE_PRESENTATION: url += ".odp"; wopiFilename += ".odp"; break;
-                case LOK_DOCTYPE_DRAWING:      url += ".odg"; wopiFilename += ".odg"; break;
-                default:                       retry = false; break;
-            }
+            LOG_DBG("Retry: calling LOK's saveAs with: '" << url.c_str() << "', '" <<
+                    (format.size() == 0 ? "(nullptr)" : format.c_str()) << "', '" <<
+                    (filterOptions.size() == 0 ? "(nullptr)" : filterOptions.c_str()) << "'.");
 
-            if (retry)
-            {
-                LOG_DBG("Retry: calling LOK's saveAs with: '" << url.c_str() << "', '" <<
-                        (format.size() == 0 ? "(nullptr)" : format.c_str()) << "', '" <<
-                        (filterOptions.size() == 0 ? "(nullptr)" : filterOptions.c_str()) << "'.");
-
-                success = getLOKitDocument()->saveAs(url.c_str(),
-                        format.size() == 0 ? nullptr :format.c_str(),
-                        filterOptions.size() == 0 ? nullptr : filterOptions.c_str());
-            }
+            success = getLOKitDocument()->saveAs(url.c_str(),
+                    format.size() == 0 ? nullptr :format.c_str(),
+                    filterOptions.size() == 0 ? nullptr : filterOptions.c_str());
         }
     }
 
@@ -1856,8 +1795,6 @@ bool ChildSession::setClientPart(const char* /*buffer*/, int /*length*/, const s
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     if (getLOKitDocument()->getDocumentType() != LOK_DOCTYPE_TEXT && part != getLOKitDocument()->getPart())
@@ -1879,8 +1816,6 @@ bool ChildSession::selectClientPart(const char* /*buffer*/, int /*length*/, cons
         sendTextFrame("error: cmd=selectclientpart kind=invalid");
         return false;
     }
-
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
     getLOKitDocument()->setView(_viewId);
 
@@ -1914,8 +1849,6 @@ bool ChildSession::moveSelectedClientParts(const char* /*buffer*/, int /*length*
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     if (getLOKitDocument()->getDocumentType() != LOK_DOCTYPE_TEXT)
@@ -1945,8 +1878,6 @@ bool ChildSession::setPage(const char* /*buffer*/, int /*length*/, const std::ve
         return false;
     }
 
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
-
     getLOKitDocument()->setView(_viewId);
 
     getLOKitDocument()->setPart(page);
@@ -1963,8 +1894,6 @@ bool ChildSession::renderShapeSelection(const char* /*buffer*/, int /*length*/, 
         sendTextFrame("error: cmd=rendershapeselection kind=syntax");
         return false;
     }
-
-    std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
 
     getLOKitDocument()->setView(_viewId);
 
@@ -2191,7 +2120,6 @@ void ChildSession::loKitCallback(const int type, const std::string& payload)
         {
             //TODO: clenaup and merge.
 
-            std::unique_lock<std::mutex> lock(_docManager.getDocumentMutex());
             const int parts = getLOKitDocument()->getParts();
             for (int i = 0; i < parts; ++i)
             {
@@ -2202,8 +2130,6 @@ void ChildSession::loKitCallback(const int type, const std::string& payload)
                               " width=" + std::to_string(INT_MAX) +
                               " height=" + std::to_string(INT_MAX));
             }
-
-            lock.unlock();
 
             getStatus("", 0);
         }
